# pebble

./: .gitignore  LICENCE  README.md  aws.go  consumer.go  go.mod  go.sum  go.work  go.work.sum  kinesis_data_sender.sh  main.go  manager_svc.go  producer.go  worker.go
.github/workflows/: build.yml
core/: go.mod
core/client/: consumer.go  producer.go
core/client/pb/: messages.proto
core/interop/: bridge.go
lang/python/: LICENCE  binding.py  consumer.py  pyproject.toml  sample.py  vegas.py
lang/python/src/libvegas/: __init__.py  consumer.py  producer.py  vegas.py
sample/: go.mod  go.sum  main.go
samples/basic/: go.mod  main.go
samples/c/: main.c
samples/clustered-consumer/: go.mod  main.go
samples/python/: .gitignore  consumer.py  producer.py  propagation_delay.py  pyvenv.cfg  requirements.txt
samples/standalone-consumer/: go.mod  go.sum  main.go
samples/standard-consumer/: go.mod  main.go
src/: Makefile  go.mod  go.sum
src/aws/: clients.go
src/client/: consumer.go
src/client/pb/: messages.pb.go
src/consumer/: consumer.go  consumer_config.go  etcd_server.go  kvs.go  leader.go  manager_config.go  manager_service.go  manager_service_test.go  messages.go  pop_config.go  pop_service.go  shard_discovery_service.go  shard_processor.go  types.go  worker_service.go
src/kvs/: chan_peer.go  in_memory_log.go  in_memory_state.go  leader.go  node.go  node_test.go
src/kvs/pb/: messages.pb.go  messages.proto
src/messages/: types.go
src/middleware/: state_critical_route.go
src/pop/: etcd_server.go  kvs.go  leader.go  main.go  manager_config.go  manager_service.go  pop.go
src/primitives/: priority_queue.go  priority_queue_test.go
