[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "libvegas"
dynamic = ["version"]
description = 'Kinesis client library'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Buddhike de Silva", email = "buddhiks@amazon.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/libvegas#readme"
Issues = "https://github.com/unknown/libvegas/issues"
Source = "https://github.com/unknown/libvegas"

[tool.hatch.version]
path = "src/libvegas/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/libvegas tests}"

[tool.coverage.run]
source_pkgs = ["libvegas", "tests"]
branch = true
parallel = true
omit = [
  "src/libvegas/__about__.py",
]

[tool.coverage.paths]
libvegas = ["src/libvegas", "*/libvegas/src/libvegas"]
tests = ["tests", "*/libvegas/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.force-include]
"libs" = "libs"

[tool.hatch.build.targets.wheel.force-include]
"libs" = "libs"
